# actuarcredibility

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
src/actuarcredibility/: __init__.py  _validation.py  bayesian.py  buhlmann.py  classical.py  core.py  diagnostics.py  hierarchical.py  regression.py
tests/: test_bayesian.py  test_buhlmann.py  test_classical.py  test_diagnostics.py  test_hierarchical.py  test_regression.py  test_smoke.py  test_validation.py
