[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "actuarcredibility"
version = "0.1.0"
description = "Credibility models for actuarial pricing — Bühlmann, Bühlmann-Straub, Jewell, Hachemeister, and Bayesian extensions."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Isaac López", email = "isaaclopg@gmail.com" },
]
keywords = [
    "actuarial",
    "credibility",
    "insurance",
    "pricing",
    "buhlmann",
    "bayesian",
    "ratemaking",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.11",
]

[project.optional-dependencies]
bayesian = [
    "pymc>=5.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/CosmikArt/actuarcredibility"
Repository = "https://github.com/CosmikArt/actuarcredibility"
Issues = "https://github.com/CosmikArt/actuarcredibility/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/actuarcredibility"]

[tool.ruff]
target-version = "py310"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
# Allow uppercase mathematical variable names (X, Y, Z, A, S, ...).
ignore = ["N803", "N806"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["actuarcredibility"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 100
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
